[metadata]
name = kblue
description = Bluetooth DBus Core utils for python projects
long_description = file: README.md
license = MIT License
url = https://github.com/tulare/kblue
author = Tulare Regnus
author_email = tulare.paxgalactica@gmail.com

[bdist_wheel]
universal = False

[options]
install_requires =
	dbus-python
	pygobject
zip_safe = False
include_package_data = True
packages = find:
test_suite = nose.collector
tests_require = 
	nose
	
[options.packages.find]
where = src

[options.package_data]
	
[options.data_files]
